# utils

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  Return-stacked ETFs vs. managed-futures funds.md  Spain Investment Accounts.md  TIDAL_ARCHITECTURE.md  audio_common.py  audio_folder_to_m4b.py  audio_transcribe_openai.sh  audio_transcribe_vibevoice.py  audio_transcribe_whisper.py  audio_transcript.py  best2025.md  debug_output.txt  factor_fund_performance.py  markdown_split.sh  pdf_convert_common.py  pdf_convert_docling.py  pdf_convert_llamaparse.py  pdf_convert_marker.py  pdf_convert_mathpix_api.py  pdf_convert_mathpix_sdk.py  pdf_convert_pymupdf4llm.py  plan.md  pyproject.toml  test.md  test.mhtml  test_2.md  test_audio_common.py  test_audio_transcribe_vibevoice.py  test_audio_transcribe_whisper.py  test_audio_transcript.py  test_matching.py  test_pdf_convert_common.py  test_pdf_page_range.py  test_tidal_match_scoring.py  (+11 more)
.claude/: settings.local.json
TranscriptionLauncher/: Info.plist  Makefile  Package.swift  README.md  TESTING.md
album-debug/: album-443980187-items-page1.json  album-443980187-resource.json  album-453362167-items-page1.json  album-453362167-resource.json  album-456502686-items-page1.json  album-456502686-resource.json  album-458420078-items-page1.json  album-458420078-resource.json  album-461743751-items-page1.json  album-461743751-resource.json  album-463419456-items-page1.json  album-463419456-resource.json  best2025.albums.json  best2025.batch-review.rerun.json  manual_cases.albums.json  (+16 more)
(+57 files in other folders)
